<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/bottom_sheet"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    app:behavior_hideable="false"
    app:behavior_peekHeight="72dp"
    app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">
    <LinearLayout
        android:id="@+id/startLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@android:color/transparent"
        android:gravity="center"
        tools:ignore="MissingConstraints">
        <Button
            android:id="@+id/startButton"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:background="@color/primaryColor"
            android:textAllCaps="false"
            android:text="Di chuyển"
            android:textColor="@color/white"
            tools:ignore="MissingConstraints"
            android:layout_marginBottom="5dp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/bgContent"
        android:orientation="vertical"
        android:paddingBottom="5dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingTop="5dp"
        app:layout_constraintTop_toBottomOf="@+id/startLayout">

        <!-- addresses part -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:baselineAligned="false"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_weight="1">
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="40dp">
                    <TextView
                        android:id="@+id/restaurantNameTitle"
                        style="@style/ContentMainBadgeTitle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentBottom="true"
                        android:layout_marginEnd="10dp"
                        android:text="@string/from_badge" />
                    <TextView
                        android:id="@+id/restaurantName"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_toEndOf="@id/restaurantNameTitle"
                        android:text="Bún đậu ABC"
                        android:layout_alignParentBottom="true"
                        android:textColor="@color/mainTextColor"
                        android:textSize="14sp" />
                    <ImageButton
                        android:id="@+id/qRCodeButton"
                        android:src="@drawable/ic_qr_code_scanner"
                        android:background="@android:color/transparent"
                        android:layout_alignParentEnd="true"
                        android:layout_width="40dp"
                        android:layout_height="40dp"/>
                </RelativeLayout>
                <TextView
                    android:id="@+id/restaurantAddress"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="213 Trần Hưng Đạo, P2, Quận 5"
                    android:textColor="@color/mainTextColor"
                    android:textSize="16sp"
                    android:textStyle="bold" />
            </LinearLayout>
            <!-- divider line -->
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginBottom="6dp"
                android:layout_marginTop="7dp"
                android:src="@color/contentDividerLine" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_weight="1">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:id="@+id/content_to_badge"
                        style="@style/ContentMainBadgeTitle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="10dp"
                        android:text="@string/to_badge" />
                    <TextView
                        android:id="@+id/customerName"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Chị Ngọc"
                        android:textColor="@color/mainTextColor"
                        android:textSize="14sp" />
                </LinearLayout>
                <TextView
                    android:id="@+id/customerAddress"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignLeft="@id/content_to_badge"
                    android:layout_alignStart="@id/content_to_badge"
                    android:layout_below="@id/content_to_badge"
                    android:text="227 Nguyễn Văn Cừ, P4, Quận 5"
                    android:textColor="@color/mainTextColor"
                    android:textSize="16sp"
                    android:textStyle="bold" />
            </LinearLayout>
        </LinearLayout>

        <!-- divider line -->
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginBottom="6dp"
            android:layout_marginTop="7dp"
            android:src="@color/contentDividerLine" />

        <!-- request button -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:baselineAligned="false"
            android:orientation="horizontal">

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <TextView
                    android:id="@+id/content_delivery_date_badge"
                    style="@style/ContentMainBadgeTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentLeft="true"
                    android:text="Thời gian giao" />

                <TextView
                    android:id="@+id/estimateTimeDelivery"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/content_delivery_date_badge"
                    android:layout_alignStart="@id/content_delivery_date_badge"
                    android:layout_alignLeft="@id/content_delivery_date_badge"
                    android:text="@string/delivery_time_mock"
                    android:textColor="@color/mainTextColor"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/content_delivery_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/estimateTimeDelivery"
                    android:layout_alignStart="@id/estimateTimeDelivery"
                    android:layout_alignLeft="@id/estimateTimeDelivery"
                    android:text="@string/delivery_date_mock"
                    android:textColor="@color/mainTextColor"
                    android:textSize="14sp" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <TextView
                    android:id="@+id/content_deadline_badge"
                    style="@style/ContentMainBadgeTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentLeft="true"
                    android:text="Tổng tiền" />

                <TextView
                    android:id="@+id/grandTotal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/content_deadline_badge"
                    android:layout_alignStart="@id/content_deadline_badge"
                    android:layout_alignLeft="@id/content_deadline_badge"
                    android:text="120.000đ"
                    android:textColor="@color/mainTextColor"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/paymentStatus"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/grandTotal"
                    android:layout_alignStart="@id/grandTotal"
                    android:layout_alignLeft="@id/grandTotal"
                    android:text="Đã thanh toán"
                    android:textColor="@color/mainTextColor"
                    android:textSize="14sp" />
            </RelativeLayout>
        </LinearLayout>
        <TextView
            android:id="@+id/deliveryStatus"
            android:text="ĐỢI NHẬN MÓN"
            android:textStyle="bold"
            android:textSize="22sp"
            android:gravity="center"
            android:textColor="@color/green"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <Button
                android:id="@+id/btnChangeDeliveryStatus"
                android:text="Nhận món"
                android:textSize="18sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/progressLoading"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:visibility="gone">
            <ProgressBar
                android:layout_width="40dp"
                android:layout_height="40dp"/>
        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>